# src/routes/dtos/group/remove-to-participant.ts
@@ -1,0 +1,5 @@
+export interface IRemoveParticipantToGroupDTO {
+  userId: string
+  participantsToRemove: string[]
+  groupId: string
+}
